--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ACCESS_PASSWORD=
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyBB4R7WFumDN0gR-UTuxGRp9o6u0QEoJKY
 GEMINI_API_BASE_URL=
 GEMINI_UPLOAD_BASE_URL=
 NEXT_PUBLIC_GEMINI_MODEL_LIST=
